update 06_packages 30_differential_abundance book.bib

--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -75,6 +75,12 @@ or online channels.
 
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
 - [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
+- [LinDA](https://cran.r-project.org/web/packages/MicrobiomeStat/) for differential abundance analysis
+- [ZicoSeq](https://cran.r-project.org/web/packages/GUniFrac/) for differential abundance analysis
+- [ALDEx2](https://www.bioconductor.org/packages/release/bioc/html/ALDEx2.html) for differential abundance analysis
+- [phyloseq](https://www.bioconductor.org/packages/release/bioc/html/phyloseq.html) for data preparation into phyloseq format for differential abundance analysis, such as ANCOMBC requires the input data is phyloseq format
+
+
 
 ### Manipulation {#sub-manipulation}
 
