improved instructions to read CSV files

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -85,7 +85,7 @@ assay(tse, "counts")[1:5,1:7]
 ```
 
 To illustrate the use of multiple assays, the relative abundance data can be 
-calcualted and stored along the original count data using `relAbundanceCounts`.
+calculated and stored along the original count data using `relAbundanceCounts`.
 
 ```{r}
 tse <- relAbundanceCounts(tse)
@@ -112,6 +112,8 @@ fact a requirement for any `SummarizedExperiment` object.
 ```{r coldata}
 colData(tse)
 ```
+
+
 
 ### rowData
 
@@ -319,87 +321,138 @@ rownames(tse) <- paste0("ASV", seq( nrow(tse) ))
 tse
 ```
 
+
+
 ### Import from external files
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
 (Tree)SummarizedExperiment object but the details depend on the file
-format. Here, we provide examples for common formats.
+format. Here, we provide examples for common formats. 
+
+
+#### CSV import
 
 **CSV data tables** can be imported with the standard R functions,
   then converted to the desired format. For detailed examples, you can
   check the [Bioconductor course
   material](https://bioconductor.org/help/course-materials/2019/BSS2019/04_Practical_CoreApproachesInBioconductor.html)
-  by Martin Morgan. The following example reads abundance tables,
-  taxonomic mapping tables, and sample metadata, assuming that the
-  input data files are properly prepared with appropriate row and
-  column names.
+  by Martin Morgan. You can also check the [example
+  files](https://github.com/microbiome/OMA/tree/master/data) and
+  construct your own CSV files accordingly.
+
+Recommendations for the CSV files are the following. File names are
+arbitrary; we refer here to the same names than in the examples:
+
+- Abundance table (`assay_taxa.csv`): data matrix (features x
+  samples); first column provides feature IDs, the first row provides
+  sample IDs; other values should be numeric (abundances).
+
+- Row data (`rowdata_taxa.csv`): data table (features x info); first
+  column provides feature IDs, the first row provides column headers;
+  this file usually contains the taxonomic mapping between different
+  taxonomic levels. Ideally, the feature IDs (row names) match one-to-one with
+  the abundance table row names. 
+
+- Column data (`coldata.csv`): data table (samples x info); first
+  column provides sample IDs, the first row provides column headers;
+  this file usually contains the sample metadata/phenodata (such as
+  subject age, health etc). Ideally, the sample IDs match one-to-one with
+  the abundance table column names. 
+
+After you have set up the CSV files, you can read them in R:
 
 ```{r importingcsv1, message=FALSE}
-count_file <- "data/assay_taxa.csv"
-tax_file <- "data/rowdata_taxa.csv"
+count_file  <- "data/assay_taxa.csv"
+tax_file    <- "data/rowdata_taxa.csv"
 sample_file <- "data/coldata.csv"
 
 # Load files
-counts  <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
-tax     <- read.csv(tax_file)     # Taxonomy table (to rowData)
-samples <- read.csv(sample_file)  # Sample data (to colData)
+counts  <- read.csv(count_file, row.names=1)   # Abundance table (e.g. ASV data; to assay data)
+tax     <- read.csv(tax_file, row.names=1)     # Taxonomy table (to rowData)
+samples <- read.csv(sample_file, row.names=1)  # Sample data (to colData)
 ```
+
+After reading the data in R, ensure the following:
+
+- abundance table (`counts`): numeric `matrix`, with feature IDs as
+  rownames and sample IDs as column names
+
+- rowdata (`tax`): `DataFrame`, with feature IDs as rownames. If this
+  is a `data.frame` you can use the function `DataFrame()` to change
+  the format. Column names are free but in microbiome analysis they
+  usually they refer to taxonomic ranks. The rownames in rowdata
+  should match with rownames in abundance table.
+
+- coldata (`samples`): `DataFrame`, with sample IDs as rownames. If
+  this is a `data.frame` you can use the function `DataFrame()` to
+  change the format.  Column names are free. The rownames in coldata
+  should match with colnames in abundance table.
 
 **Always ensure that the tables have rownames!** The _TreeSE_ constructor compares 
-rownames and makes sure that, for example, right samples are linked with right patient.
+rownames and ensures that, for example, right samples are linked with right patient.
+
+Also ensure that the row and column names match one-to-one between
+abundance table, rowdata, and coldata:
 
 ```{r importingcsv2}
-# Add rownames and remove an additional column
-rownames(counts) <- counts$X
-counts$X <- NULL
+# Match rows and columns
+counts <- counts[rownames(tax), rownames(samples)]
 
-# Add rownames and remove an additional column
-rownames(samples) <- samples$X
-samples$X <- NULL
-
-# Add rownames and remove an additional column
-rownames(tax) <- tax$X
-tax$X <- NULL
-
-# As an example:
-# If e.g. samples do not match between colData and counts table, you must order 
-# counts based on colData
-if( any( colnames(counts) != rownames(samples) ) ){
-    counts <- counts[ , rownames(samples) ]
-}
-
-# And same with rowData and counts...
-if( any( rownames(counts) != rownames(tax) ) ){
-    counts <- counts[ rownames(tax), ]
-}
+# Let us ensure that the data is in correct (numeric matrix) format:
+counts <- as.matrix(counts)
 ```
 
-The tables must be in correct format:
+If you hesitate about the format of the data, you can compare to one
+of the available demonstration data sets, and make sure that your data
+components have the same format.
 
-   - counts --> matrix
+There are many different source files and many different ways to read
+data in R. One can do data manipulation in R as well. Investigate the
+entries as follows.
+
+
+```{r demodata, message=FALSE}
+# coldata rownames match assay colnames
+all(rownames(samples) == colnames(counts)) # our data set
+class(samples) # should be data.frame or DataFrame
+
+# rowdata rownames match assay rownames
+all(rownames(tax) == rownames(counts)) # our data set
+class(tax) # should be data.frame or DataFrame
+
+# Counts 
+class(counts) # should be a numeric matrix
+```
+
+
+### Constructing TreeSummarizedExperiment
+
+Now let us create the TreeSE object from the input data tables. Here
+we also convert the data objects in their preferred formats:
+
+   - counts --> numeric matrix
    - rowData --> DataFrame
    - colData --> DataFrame
-   
+
+The `SimpleList` could be used to include multiple alternative assays, if
+necessary.
+
+
 ```{r importingcsv3}
-# Ensure that the data is in correct format
-
-# counts should be in matrix format
-counts <- as.matrix(counts)
-# And it should be added to a SimpleList
-assays <-  SimpleList(counts = counts)
-
-# colData and rowData should be in DataFrame format
-colData <- DataFrame(colData)
-rowData <- DataFrame(rowData)
-
 # Create a TreeSE
-tse_taxa <- TreeSummarizedExperiment(assays = assays,
-                                     colData = samples,
-                                     rowData = tax)
+tse_taxa <- TreeSummarizedExperiment(assays =  SimpleList(counts = counts),
+                                     colData = DataFrame(samples),
+                                     rowData = DataFrame(tax))
 
 tse_taxa
 ```
+
+Now you should have a ready-made TreeSE data object that can be used in downstream analyses.
+
+
+### Constructing MultiAssayExperiment
+
 To construct a _MultiAssayExperiment_ object, just combine multiple _TreeSE_ data containers. 
 Here we import metabolite data from the same study.
 
@@ -408,23 +461,13 @@ count_file <- "data/assay_metabolites.csv"
 sample_file <- "data/coldata.csv"
 
 # Load files
-counts  <- read.csv(count_file)  
-samples <- read.csv(sample_file)
+counts  <- read.csv(count_file, row.names=1)  
+samples <- read.csv(sample_file, row.names=1)
 
-# Add rownames and remove an additional column
-rownames(counts) <- counts$X
-counts$X <- NULL
-rownames(samples) <- samples$X
-samples$X <- NULL
+# Create a TreeSE for the metabolite data
+tse_metabolite <- TreeSummarizedExperiment(assays = SimpleList(concs = as.matrix(counts)),
+                                           colData = DataFrame(samples))
 
-# Convert into right format
-counts <- as.matrix(counts)
-assays <-  SimpleList(concs = counts)
-colData <- DataFrame(colData)
-
-# Create a TreeSE
-tse_metabolite <- TreeSummarizedExperiment(assays = assays,
-                                           colData = samples)
 tse_metabolite
 ```
 
@@ -441,6 +484,10 @@ mae <- MultiAssayExperiment(experiments = experiments)
 mae
 ```
 
+
+
+### Import functions for standard formats
+
 Specific import functions are provided for:
 
 -   Biom files (see `help(mia::loadFromBiom)`)
@@ -448,7 +495,7 @@ Specific import functions are provided for:
 -   Mothur files (see `help(mia::loadFromMothur)`)
 
 
-#### Biom example
+#### Biom import
 
 This example shows how Biom files are imported into a
 `TreeSummarizedExperiment` object.
