exprs_values to assay.type

--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -7,6 +7,19 @@ chapterPreamble()
 
 <img src="general/figures/mia_logo.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
 
+
+The Bioconductor framework for microbiome data science include the following components:
+
+- specific data containers to organize microbiome profiling data
+- dedicated R packages that provide methods for analysing the data
+- active user and developer community
+
+
+This section provides an overview of the package ecosystem. Section
+\@ref(example-data) links to various open microbiome data resources
+that support this framework.
+
+
 ## Package installation
 
 You can install all packages that are required to run every example in this book via the following command:
@@ -14,7 +27,6 @@ You can install all packages that are required to run every example in this book
 ```{r eval=FALSE, message=FALSE}
 source("https://raw.githubusercontent.com/microbiome/OMA/master/install_packages.R")
 ```
-
 
 ### Installing specific packages {#packages}
 
@@ -86,12 +98,9 @@ or online channels.
 - [Tools for Microbiome
   Analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
   site listed over 130 R packages for microbiome data science in
-  2023. Many of these do not directly support the data containers used
-  in this book but can be used with minor conversions between formats.
-
-## Data ecosystem
-
-Section \@ref(example-data) links to various open microbiome data resources that support this framework.
+  2023. Many of these are not in Bioconductor, or do not directly
+  support the data containers used in this book but can be used with
+  minor modifications.
 
 
 
