--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -228,7 +228,7 @@ tse <- runMDS(tse,
               FUN = vegan::vegdist,
               method = "bray",
               name = "MDS",
-              exprs_values = "counts",
+              assay.type = "counts",
               ncomponents = 3)
 # plot results of a 3-component MDS on tse,
 # coloured-scaled by faith diversity index
