--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -74,7 +74,7 @@ Group samples and return DMNGroup object that contains a summary (see also `perf
 Patient status is used for grouping.
 
 ```{r}
-dmn_group <- calculateDMNgroup(tse_dmn, variable = "SampleType",  exprs_values = "counts",
+dmn_group <- calculateDMNgroup(tse_dmn, variable = "SampleType",  assay.type = "counts",
                                k = 2, seed=.Machine$integer.max)
 
 dmn_group
@@ -126,7 +126,7 @@ tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
 
 library(scater)
 # Calculate PCoA
-tse <- runMDS(tse, exprs_values = "clr", method = "euclidean")
+tse <- runMDS(tse, assay.type = "clr", method = "euclidean")
 
 ```
 
@@ -179,7 +179,7 @@ tse <- transformCounts(tse, method = "relabundance")
 tse <- transformCounts(tse, method = "rclr")
 
 # Performing and storing UMAP
-tse <- runUMAP(tse, name="UMAP", exprs_values="rclr")
+tse <- runUMAP(tse, name="UMAP", assay.type="rclr")
 
 k <- c(2,3,5,10)
 ClustAndPlot <- function(x) {
