--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -152,7 +152,7 @@ km <- kmeans(diss, 3, nstart = 25)
 colData(tse)$clusters <- as.factor(km$cluster)
 
 # Perform PCoA so that we can visualize clusters
-tse <- runMDS(tse, exprs_values = "relabundance", FUN = vegan::vegdist, method = "bray")
+tse <- runMDS(tse, assay.type = "relabundance", FUN = vegan::vegdist, method = "bray")
 
 # Plot PCoA and color clusters
 plotReducedDim(tse, "MDS", colour_by = "clusters")
@@ -221,7 +221,7 @@ Group samples and return DMNGroup object that contains a summary.
 Patient status is used for grouping.
 
 ```{r}
-dmn_group <- calculateDMNgroup(tse_dmn, variable = "SampleType",  exprs_values = "counts",
+dmn_group <- calculateDMNgroup(tse_dmn, variable = "SampleType",  assay.type = "counts",
                                k = 2, seed=.Machine$integer.max)
 
 dmn_group
@@ -272,7 +272,7 @@ tse <- transformCounts(tse, "relabundance", method = "clr")
 library(scater)
 
 # Does principal coordinate analysis
-df <- calculateMDS(tse, exprs_values = "clr", method = "euclidean")
+df <- calculateMDS(tse, assay.type = "clr", method = "euclidean")
 
 # Creates a data frame from principal coordinates
 euclidean_pcoa_df <- data.frame(pcoa1 = df[,1], 
@@ -334,7 +334,7 @@ tse <- enterotype
 tse <- transformCounts(tse, method = "rclr")
 
 # Performing and storing UMAP
-tse <- runUMAP(tse, name="UMAP", exprs_values="rclr")
+tse <- runUMAP(tse, name="UMAP", assay.type="rclr")
 
 k <- c(2,3,5,10)
 ClustAndPlot <- function(x) {
