--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -280,7 +280,7 @@ tse_Genus <- addPerSampleDominantTaxa(tse_Genus,assay_name="relative_abundance",
 
 # Performing PCoA with Bray-Curtis dissimilarity.
 tse_Genus <- runMDS(tse_Genus, FUN = vegan::vegdist, ncomponents = 3,
-              name = "PCoA_BC", exprs_values = "relative_abundance")
+              name = "PCoA_BC", assay.type = "relative_abundance")
 
 # Getting the 6 top taxa
 top_taxa <- getTopTaxa(tse_Genus,top = 6, assay_name = "relative_abundance")
