--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -85,7 +85,7 @@ tse <- tse[, colData(tse)$Country == "Finland"]
 
 # MDS analysis with the first 20 dimensions
 tse  <- scater::runMDS(tse, FUN = vegan::vegdist, method = "bray", 
-                       name = "MDS_BC", exprs_values = "counts", ncomponents = 20)
+                       name = "MDS_BC", assay.type = "counts", ncomponents = 20)
 ord  <- reducedDim(tse, "MDS_BC", withDimnames = TRUE)
 # retrieve eigenvalues
 eigs <- attr(ord, "eig")
@@ -206,7 +206,7 @@ And now nMDS.
 
 ```{r message = FALSE, warning = FALSE}
 tse2  <- runNMDS(tse2, FUN = vegan::vegdist, method = "bray", 
-                name = "NMDS_BC", exprs_values = "counts", ncomponents = 20)
+                name = "NMDS_BC", assay.type = "counts", ncomponents = 20)
 scater::plotReducedDim(tse2, "NMDS_BC", colour_by = "CST", point_alpha = 1) + th + 
         labs(title = "NMDS Bray-Curtis by Cluster") +
         theme(plot.title = element_text(hjust = 0.5)) + CSTColorScale
@@ -306,7 +306,7 @@ Group samples and return DMNGroup object that contains a summary.
 Sample country is used for grouping.
 
 ```{r}
-dmn_group <- calculateDMNgroup(tse_dmn, variable = "Country",  exprs_values = "counts",
+dmn_group <- calculateDMNgroup(tse_dmn, variable = "Country",  assay.type = "counts",
                                k = 3, seed=.Machine$integer.max)
 
 dmn_group
@@ -351,7 +351,7 @@ Computing the bray PCoA and storing it as a dataframe
 tse_dmn <- transformCounts(tse_dmn, method = "relabundance")
 # Does principal coordinate analysis
 bray_pcoa_df <- calculateMDS(tse_dmn, FUN = vegan::vegdist, method = "bray", 
-                             exprs_values = "relabundance")
+                             assay.type = "relabundance")
 
 # Convert to data.frame
 bray_pcoa_df <- as.data.frame(bray_pcoa_df)
