--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -154,7 +154,7 @@ library(scater)
 # Bray-Curtis is usually applied to relative abundances
 tse <- transformCounts(tse, method = "relabundance")
 # Perform PCoA
-tse <- runMDS(tse, FUN = vegan::vegdist, method = "bray", name = "PCoA_BC", exprs_values = "relabundance")
+tse <- runMDS(tse, FUN = vegan::vegdist, method = "bray", name = "PCoA_BC", assay.type = "relabundance")
 ```
 
 Sample similarities can be visualized on a lower-dimensional display
@@ -185,7 +185,7 @@ meaningful way.
 
 ```{r plot-mds-nmds-comparison, fig.cap="Comparison of MDS and NMDS plots based on the Bray-Curtis or euclidean distances on the GlobalPattern dataset.", message=FALSE}
 tse <- runMDS(tse, FUN = vegan::vegdist, name = "MDS_euclidean",
-             method = "euclidean", exprs_values = "counts")
+             method = "euclidean", assay.type = "counts")
 tse <- runNMDS(tse, FUN = vegan::vegdist, name = "NMDS_BC")
 tse <- runNMDS(tse, FUN = vegan::vegdist, name = "NMDS_euclidean",
                method = "euclidean")
@@ -210,7 +210,7 @@ library(scater)
 tse <- runMDS(tse, FUN = mia::calculateUnifrac, name = "Unifrac",
               tree = rowTree(tse),
               ntop = nrow(tse),
-             exprs_values = "counts")
+             assay.type = "counts")
 ```
 
 ```{r plot-unifrac, fig.cap="Unifrac distances scaled by MDS of the GlobalPattern dataset."}
@@ -223,7 +223,7 @@ Other dimension reduction methods, such as `PCA`, `t-SNE` and `UMAP` are
 inherited directly from the `scater` package.
 
 ```{r}
-tse <- runPCA(tse, name = "PCA", exprs_values = "counts", ncomponents = 10)
+tse <- runPCA(tse, name = "PCA", assay.type = "counts", ncomponents = 10)
 ```
 
 ```{r plot-pca, fig.cap="PCA plot on the GlobalPatterns data set containing sample from different sources."}
@@ -236,7 +236,7 @@ sample set.
 FIXME: let us switch to UMAP for the examples?
 
 ```{r}
-tse <- runTSNE(tse, name = "TSNE", exprs_values = "counts", ncomponents = 3)
+tse <- runTSNE(tse, name = "TSNE", assay.type = "counts", ncomponents = 3)
 ```
 
 ```{r plot-tsne, fig.cap="t-SNE plot on the GlobalPatterns data set containing sample from different sources."}
@@ -433,7 +433,7 @@ tse_Genus <- addPerSampleDominantTaxa(tse_Genus, assay_name="relabundance", name
 Performing PCoA with Bray-Curtis dissimilarity.
 ```{r}
 tse_Genus <- runMDS(tse_Genus, FUN = vegan::vegdist,
-              name = "PCoA_BC", exprs_values = "relabundance")
+              name = "PCoA_BC", assay.type = "relabundance")
 ```
 
 
